Fix redirects SEO issue ref (GSC Warning) and fix coordinates

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -89,8 +89,8 @@ const socialImage = image ? new URL(image, Astro.url).href : new URL('/cover.web
           },
           "geo": {
             "@type": "GeoCoordinates",
-            "latitude": "13.1358",
-            "longitude": "77.6158"
+            "latitude": "13.151060",
+            "longitude": "77.610022"
           }
         },
         "performer": {
@@ -119,6 +119,7 @@ const socialImage = image ? new URL(image, Astro.url).href : new URL('/cover.web
           "validThrough": "2025-03-30T18:00:00+05:30"
         },
         "image": "https://hack-nocturne.in/cover.webp",
+        "sameAs": "https://hack-nocturne.devfolio.co/",
         "url": "https://hack-nocturne.in"
       }
     </script>
