Correct dates, update seo keywords and add 404 page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 
 const title = "Hack-Nocturne '26 | The Premier Hackathon Experience";
 const description =
-  "Join Hack-Nocturne '26, a 24-hour hackathon at Sir MVIT Bengaluru on March 28-29. Open track, ₹50,000+ in prizes, exciting swags and refreshments, internship opportunities with Zintlr. Through the Night, Ideas Take Flight!";
+  "Join Hack-Nocturne '26, a 24-hour hackathon at Sir MVIT Bengaluru on March 06-07. Open track, ₹1,50,000+ in prizes, exciting swags, refreshments & internship opportunities. Through the Night, Ideas Take Flight!";
 ---
 
 <Layout title={title} description={description}>
