--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const socialImage = image ? new URL(image, Astro.url).href : new URL('/cover.web
     <meta name="title" content={title} />
     <meta name="description" content={description} />
     <meta name="author" content="TechHub Community & Glug MVIT" />
-    <meta name="keywords" content="hackathon, hack-nocturne, techhub, glug-mvit, bengaluru, sir-mvit, coding, programming, innovation, technology, competition, zintlr, devfolio, march 2025" />
+    <meta name="keywords" content="hackathon, hack-nocturne, hack nocturne, hnt, techhub, glug mvit, bengaluru, sir mvit, coding, programming, innovation, technology, competition, zintlr, devfolio, march 2026" />
     
     <!-- Event-specific meta tags -->
     <meta name="event:name" content="Hack-Nocturne '26" />
